# Chronic-Kidney-Disease-Chatbot

./: .dockerignore  1.py  Dockerfile  GITHUB_PROFILE_README.md  README.md  Thesis.docx  app.py  evaluate_e2e.py  evaluate_ml.py  evaluate_rag.py  helper.py  model.py  pyproject.toml  requirements.txt  store.py  vercel.json  wsgi.py
data/: encoders.pkl  eval_e2e_results.json  eval_rag_results_raw.json  kidney_disease_rf_model.pkl  test_dataset.json
src/: __init__.py  document_processing.py  hybridsearch.py  ml_model.py  rag_pipeline.py  vectorstore.py
static/scripts/: index.js
static/styles/: form.css  index.css  result.css
templates/: form.html  index.html  result.html
